# nbo-autoscanning

./: .gitignore  README.md
CatkinWorkSpace/: calibration.txt  live.txt  real_calibration.txt  sim.txt  single.txt
CatkinWorkSpace/src/autoseg/: CMakeLists.txt  package.xml
CatkinWorkSpace/src/autoseg/scripts/: AutoSpin.py
CatkinWorkSpace/src/autoseg/src/: AutoSpin.cpp  AutoSpin.h
CatkinWorkSpace/src/iroboscan/: CMakeLists.txt  FindOpenNI2.cmake  Finddarknet.cmake  Findefusion.cmake  Findsanalysis.cmake  package.xml
CatkinWorkSpace/src/iroboscan/launch/: fetch_nav.launch  fetch_test.launch
CatkinWorkSpace/src/iroboscan/launch/include/: fetch.launch.xml
CatkinWorkSpace/src/iroboscan/robots/: fetch.gazebo.xacro  fetch.urdf
CatkinWorkSpace/src/iroboscan/scripts/: capture_image.py  prepare_parallel_pose.py  prepare_scanning_pose.py  prepare_simulated_robot.py  publish_image.py
CatkinWorkSpace/src/iroboscan/src/: Main.cpp  MainController.cpp  MainController.h
CatkinWorkSpace/src/iroboscan/src/Tools/: GUI.h  GoalPublisher.cpp  GoalPublisher.h  GoalPublisherWithArm.cpp  GoalPublisherWithArm.h  GoalPublisherWithHead.cpp  GoalPublisherWithHead.h  NBOFlicker.cpp  NBOFlicker.h  NBVFilter.cpp  NBVFilter.h  ROSLiveLogReader.cpp  ROSLiveLogReader.h  ScanningController.cpp  ScanningController.h  SimLogReader.cpp  SimLogReader.h  YoloWrapper.cpp  YoloWrapper.h  arapaho.cpp  arapaho.hpp
Core/src/: CMakeLists.txt  ElasticFusion.cpp  ElasticFusion.h  FrameSegmentation.cpp  FrameSegmentation.h  GPUTexture.cpp  GPUTexture.h  GlobalModel.cpp  GlobalModel.h  IndexMap.cpp  IndexMap.h
Core/src/Cuda/: cudafuncs.cu  cudafuncs.cuh
Core/src/Shaders/: ComputePack.cpp  ComputePack.h  cal_normal.frag  cal_vertex.frag  combo_splat.frag  data.vert  draw_feedback.vert  draw_global_surface.geom  gmon.out  index_map.frag  update.vert  update.vert~
Core/src/Utils/: GPUConfig.h  Parse.h
Seg/src/: AdjacentModeDatasetGenerator.cpp  AdjacentModeDatasetGenerator.h  BagOfWordPartialMatching.cpp  BagOfWordPartialMatching.h  CMakeLists.txt  DatasetGenerator.h  DescriptorGenerator.cpp  DescriptorGenerator.h  ImprovedRANSAC.cpp  ImprovedRANSAC.h  KeypointRepresentation.cpp  KeypointRepresentation.h  MatchingResultParser.cpp  MatchingResultParser.h  ModelDataset.cpp  ModelDataset.h  NBO.cpp  NBO.h  NBV.cpp  NBV.h  PartialCorrespondence.cpp  PartialCorrespondence.h  PartialMatching.h  PartialMatchingFacada.cpp  PartialMatchingFacada.h  PatchFusion.cpp  PatchFusion.h  PriorityQueuePartialMatching.cpp  PriorityQueuePartialMatching.h  RANSAC.cpp  RANSAC.h  ScanningScheme.cpp  ScanningScheme.h  SegmentedPatch.cpp  SegmentedPatch.h  SingleModeDatasetGenerator.cpp  SingleModeDatasetGenerator.h  VisualWord.cpp  VisualWord.h
Seg/src/Cuda/: Marvin3DMatch.cuh  cudafuncs.cu  cudafuncs.cuh  marvin.hpp
Seg/src/Shaders/: Shaders.h  draw_matched_models.frag  draw_matched_models.vert
Seg/src/Utils/: BoundingBox.cpp  BoundingBox.h  DirectoryReader.cpp  DirectoryReader.h  FileNameParser.h  PlyReader.cpp  PlyReader.h  PlyWriter.cpp  PlyWriter.h  utils.hpp
